--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>NZB Server</title>
+    <base href="${ base }/"></base>
     <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg"/>' />
   </head>
   <body>
@@ -37,7 +38,7 @@
               <input type="checkbox" name="files" value="${ file.name }" form="bulk" />
             </td>
             <td>
-              <a href="./${ file.name }">${ file.name }</a>
+              <a href="${ file.name }">${ file.name }</a>
             </td>
             <td>
               ${ prettyBytes(file.size) }
@@ -56,7 +57,7 @@
           <tr>
             <td>
               <form id="bulk">
-                <button type="submit" formmethod="POST" formaction="/?action=extract">Extract</button>
+                <button type="submit" formmethod="POST" formaction="?action=extract">Extract</button>
               </form>
             </td>
           </tr>
